# Freelancer

./: .gitignore  .pythonrc  ARCHITECTURE.md  CODEBASE_CONSOLIDATION.md  CODEBASE_INDEX.md  CORE_CONSOLIDATION_ACTIONS.md  DEVELOPMENT_TODOS.md  FILE_MANIFEST.md  GOOGLE_OAUTH_SETUP.md  Makefile  PHASE3_DETAILED_PLAN.md  README.md  REFACTORING_RECS.md  TODOS.md  TODOS_ARCHIVE.md  UNIFYING_STATE_SERVICES_SETTINGS_INTEGRATIONS.md  app.config.env  app.config.env.example  app.py  cleanup.sh  cookies.txt  docker-compose.dev.yml  docker-compose.yml  emergency.py  env.example.txt  headers.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  run_auth_tests.py  settings.py
add_ons/: SOCIAL_ADDON.md
add_ons/services/: README.md  __init__.py  notifications_base.py
add_ons/webhooks/: __init__.py  stripe.py  webhooks.py
app/: app.py  main.py  security.py  settings.py
app/add_ons/: STREAM_ADDON.md  __init__.py
app/config/: addons.py
app/core/: addon_loader.py  app.py  app_factory.py  bootstrap.py  compat.py  exceptions.py  mounting.py  security.py
app/db/: base_class.py  models.py
app/docs/: APP_INTEGRATION_GUIDE.md  ARCHITECTURE.md  AUTH_REFACTOR.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP.md  DATABASE_REFACTOR.md  ENV_TEMPLATE.md  EXAMPLE_APPS_REFACTOR.md  GRAPHQL_REFACTOR.md  MIDDLEWARE_FASTHTML_COMPATIBILITY.md  MOUNT_EXAMPLES.md  PROGRESS.md  REFACTOR_PLAN.md  SCHEMA_CLEANUP.md  SESSION_SUMMARY.md  SETTINGS_GUIDE.md  STARTUP_CHECKLIST.md  STORAGE_REFACTOR.md
app/examples/: __init__.py
app/middleware/: __init__.py  redis_session.py  security.py
app/services/: auth.py  email.py  event_bus.py  storage.py
app/tests/: conftest.py  seed_lms_data.py  test_async_auth.py  test_async_db_redis.py  test_async_e2e.py  test_async_graphql_recs.py  test_async_media_minio.py   test_lms_setup.py  test_oauth.py  test_repositories.py
app/utils/: files.py  helpers.py  logger.py
core/: addon_loader.py  app_factory.py  bootstrap.py  mounting.py
core/db/: config.py  connection_pool.py  session.py
core/di/: __init__.py  container.py
core/gdpr/: __init__.py  anonymizer.py  audit_logger.py  consent_manager.py  cookie_consent.py  data_subject_rights.py  retention_manager.py
docs/: ADMIN_CREDENTIALS.md  BACKUP_RECOVERY.md  CART_PERFORMANCE_GUIDE.md  CODEBASE_INDEX.md  DEPENDENCY_INJECTION_GUIDE.md  ENCRYPTION.md  ERROR_HANDLING.md  EXAMPLES_INTEGRATION_GUIDE.md  GDPR_COMPLIANCE.md  GLOBAL_SINGLETONS_AUDIT.md  PYDANTIC_USAGE.md  QUERY_OPTIMIZATION.md  SECURITY_AUDIT_REPORT.md  STREAM_DB_MIGRATION_GUIDE.md  TEST_PLAN.md  TODOS.md  TYPE_SAFETY.md  WEB_ADMIN_TODOS.md
infrastructure/: docker-compose.dev.yml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: 20231226_150000_initial_schema.py  20231226_170000_add_performance_indexes.py
scripts/: bootstrap_s3.sh  clean_pycache.py  consolidate_core.py  create_device_schema.py  create_indexes.py  create_indexes_simple.py  create_test_users.py  create_test_users_simple.py  db_backup.py  db_optimize.py  fix_database_schema.py  gdpr_manager.py  import_grafna_dashboard.sh  manage_migrations.py  minio_bootstrap.sh  run_tests.py  test_auth_endpoints.py  test_new_features.py
tests/: TEST_PLAN.md  conftest.py  test_auth_integration.py  test_db_config.py  test_device_management.py  test_discount_service.py  test_encryption.py  test_jwt_refresh.py  test_migrations.py  test_permissions.py  test_permissions_integration.py
(+574 files in other folders)
