[project]
name = "freelancer"
version = "1.0.0"
description = "Modular FastAPI + FastHTML + MonsterUI app with GraphQL and Stripe"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "pymongo",
  "motor",
  "redis",
  "boto3",
  "aiobotocore",
  "argon2-cffi",
  "bcrypt",
  "python-dotenv",
  "strawberry-graphql[fastapi]",
  "alembic",
  "python-fasthtml",
  "MonsterUI",
  "htmx",
  "stripe",
  "PyJWT",
  "cryptography",
  "celery",
  "prometheus_client",
  "duckdb",
  "watchtower",
  "pillow>=12.0.0",
  "reportlab>=4.4.5",
  "cryptography>=41.0.0", 
  "httpx"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "infrastructure*", "scripts*"]
