[project]
name = "freelancer"
version = "1.0.0"
description = "ModularFastHTML + MonsterUI app with GraphQL and Stripe"
requires-python = ">=3.12"
dependencies = [
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "pymongo",
  "motor",
  "redis",
  "boto3",
  "aiobotocore",
  "argon2-cffi",
  "bcrypt",
  "python-dotenv",
  "strawberry-graphql",
  "alembic",
  "python-fasthtml",
  "MonsterUI",
  "htmx",
  "stripe",
  "PyJWT",
  "cryptography",
  "celery",
  "prometheus_client",
  "duckdb",
  "watchtower",
  "pillow>=12.0.0",
  "reportlab>=4.4.5",
  "cryptography>=41.0.0", 
  "httpx",
  "email-validator",
  "python-multipart"
]

[project.optional-dependencies]
 test = [
   "pytest>=7.0",
   "pytest-asyncio>=0.21",
   "pytest-cov>=4.0",
 ]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "infrastructure*", "scripts*"]

[tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-ra"
 asyncio_mode = "auto"
 markers = [
   "async: marks tests as async",
 ]
