[project]
name = "freelancer"
version = "1.0.0"
description = "ModularFastHTML + MonsterUI app with GraphQL and Stripe"
requires-python = ">=3.12"
dependencies = [
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "pymongo",
  "motor",
  "redis",
  "boto3",
  "aiobotocore",
  "argon2-cffi",
  "bcrypt",
  "python-dotenv",
  "strawberry-graphql",
  "alembic",
  "python-fasthtml",
  "MonsterUI",
  "htmx",
  "stripe",
  "PyJWT",
  "cryptography",
  "celery",
  "prometheus_client",
  "duckdb",
  "watchtower",
  "pillow>=12.0.0",
  "reportlab>=4.4.5",
  "cryptography>=41.0.0",
  "httpx",
  "email-validator",
  "python-multipart",
  "opencv-python",
  "aiofiles",
  "user-agents>=2.2.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
 test = [
   "pytest>=7.0",
   "pytest-asyncio>=0.21",
   "pytest-cov>=4.0",
 ]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "infrastructure*", "scripts*"]

[tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-ra"
 asyncio_mode = "auto"
 markers = [
   "async: marks tests as async",
 ]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "starlette[testing]>=0.49.3",
]
